--- a/backend/templates/elements/sidebar.html
+++ b/backend/templates/elements/sidebar.html
@@ -1,7 +1,7 @@
 <div id="sidebar">
 	<a class="nav-logo" href="/">
 		<img src="/static/img/logo.svg">
-		<span>Raffah Coin</span>
+		<span>Minetok Coin</span>
 	</a>
 	<div class="nav-buttons">
 		<a href="{{ url_for('frontend.home') }}">
