--- a/backend/templates/elements/stats.html
+++ b/backend/templates/elements/stats.html
@@ -10,9 +10,9 @@
 						<div>Masternodes: <b>{{ stats.masternodes }}</b></div>
 						<div>Unique addresses: <b>{{ stats.addresses }}</b></div>
 						<div>Non-reward transactions: <b>{{ stats.transactions }}</b></div>
-						<div>Total supply: <b>{{ stats.supply|amount }} RCI</b></div>
-						<div>Collateral: <b>{{ stats.collateral|amount }} RCI</b></div>
-						<div>Locked coins: <b>{{ stats.locked|amount }} RCI</b></div>
+						<div>Total supply: <b>{{ stats.supply|amount }} MTK</b></div>
+						<div>Collateral: <b>{{ stats.collateral|amount }} MTK</b></div>
+						<div>Locked coins: <b>{{ stats.locked|amount }} MTK</b></div>
 					</div>
 				</div>
 			</div>
