--- a/backend/templates/pages/holders.html
+++ b/backend/templates/pages/holders.html
@@ -26,7 +26,7 @@
 										</a>
 									</td>
 									<td>
-										<span>{{ entry.balance|amount }}</span> <b>RCI</b>
+										<span>{{ entry.balance|amount }}</span> <b>MTK</b>
 									</td>
 								</tr>
 							{% endfor %}
