--- a/backend/templates/pages/transactions.html
+++ b/backend/templates/pages/transactions.html
@@ -70,7 +70,7 @@
 									</td>
 									<td>
 										<div class="reward-wrapper">
-											<span>{{ transaction.amount|amount }} <b>RCI</b></span>
+											<span>{{ transaction.amount|amount }} <b>MTK</b></span>
 											{% if transaction.coinbase or transaction.coinstake %}
 												<img class="reward-icon" src="/static/img/reward.svg">
 											{% endif %}
