--- a/backend/templates/layout.html
+++ b/backend/templates/layout.html
@@ -7,7 +7,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 		<script src=https://unpkg.com/lightweight-charts@3.3.0/dist/lightweight-charts.standalone.production.js></script>
 
-		<link rel="shortcut icon" href="/static/img/MTK.png" type="image/x-icon">
+		<link rel="shortcut icon" href="/static/img/minetok.png" type="image/x-icon">
 		<title>{% if title %}{{ title }} | {% endif %}Minetok Coin Explorer</title>
 
 		<script src=https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js></script>
